Archive2/f9/7b59124b052d2d/output
main.cpp:4:31: error: 'constexpr' needed for in-class initialization of static data member 'const double A::ggg' of non-integral type [-fpermissive]
     static const double ggg = 10.0f;
                               ^
main.cpp: In function 'int main()':
main.cpp:9:7: warning: unused variable 'a' [-Wunused-variable]
     A a;
       ^
